--- a/about/listeners.html
+++ b/about/listeners.html
@@ -7,26 +7,41 @@ var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
 var ATONINDEX = "https://raw.githubusercontent.com/pianoroll/SUPRA/master/index.aton";
 
+
+//////////////////////////////
+//
+// DOMContentLoaded event listener --
+//
+
 document.addEventListener("DOMContentLoaded", function () {
 	HighlightLinkInHeader();
 	CGI = GetCgiParameters();
-
 	if (sessionStorage.ROLLINFO) {
 		ROLLINFO = JSON.parse(sessionStorage.ROLLINFO);
-		// displayRandom(ROLLINFO);
-		DisplayStats(ROLLINFO);
+		doAction(ROLLINFO);
 	} else {
 		var request = new XMLHttpRequest();
 		request.addEventListener("load", function () {
 			var aton = new ATON;
 			ROLLINFO = aton.parse(this.responseText).ROLL;
-			// displayRandom(ROLLINFO);
-			DisplayStats(ROLLINFO);
+			doAction(ROLLINFO);
 		});
 		request.open("GET", ATONINDEX);
 		request.send();
 	}
-
 });
+
+
+
+//////////////////////////////
+//
+// doAction --
+//
+
+function doAction(rollInfo) {
+	DisplayStats(ROLLINFO);
+}
+
+
 
 </script>
