--- a/duplicates/listeners.html
+++ b/duplicates/listeners.html
@@ -7,12 +7,18 @@
 var PEOPLE = {% include data/people.json %}.PERSON;
 var PEEPS = {};
 for (var i=0; i<PEOPLE.length; i++) {
-	PEEPS[PEOPLE[i].NAME] = PEOPLE[i].WIKIPEDIA;
+	PEEPS[PEOPLE[i].NAME] = PEOPLE[i];
 }
 
 var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
 var ATONINDEX = "https://raw.githubusercontent.com/pianoroll/SUPRA/master/index.aton";
+
+
+//////////////////////////////
+//
+// DOMContentLoaded event listener --
+//
 
 document.addEventListener("DOMContentLoaded", function () {
 	HighlightLinkInHeader();
@@ -35,9 +41,15 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 
 
+
+//////////////////////////////
+//
+// doAction --
+//
+
 function doActions(listOfRolls) {
 	DisplayStats(listOfRolls);
-	displayDuplicates(listOfRolls, "#duplicates");
+	displayDuplicates(listOfRolls, "#duplicates", PEEPS);
 }
 
 
