--- a/bib/styles-local.html
+++ b/bib/styles-local.html
@@ -19,6 +19,11 @@ div#su-content {
 	min-height: 700px;
 }
 
+#main-content {
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
 input#search {
 	margin-left: 80px;
 	width: 380px;
