--- a/links/styles-local.html
+++ b/links/styles-local.html
@@ -5,6 +5,24 @@ p {
 	font-size: 2.25rem;
 }
 
+details {
+	font-size: 2rem;
+	padding-left: 20px;
+	padding-right: 20px;
+	line-height: 2.5rem;
+	margin-bottom: 40px;
+}
+
+summary {
+	text-indent: -25px;
+	font-size: 2.25rem;
+	margin-left: -20px;
+	margin-right: -20px;
+	line-height: 2.75rem;
+	padding-bottom: 5px;
+	outline: none;
+}
+
 
 a {
 	color: #8c1515;
