--- a/bib/listeners.html
+++ b/bib/listeners.html
@@ -1,15 +1,12 @@
 
 {% include scripts/scripts-common.html %}
+<script>{% include scripts/aton.js %}</script>
 
 <script>
 // vim: ts=3
 
-var PEOPLE = {% include data/people.json %}.PERSON;
-var PEEPS = {};
-for (var i=0; i<PEOPLE.length; i++) {
-	PEEPS[PEOPLE[i].NAME] = PEOPLE[i];
-}
-var BIBLIO = {% include data/bibliography.json %}.REFERENCE;
+var aton = new ATON;
+var BIBLIO = aton.parse(`{% include data/bibliography.aton %}`).REFERENCE;
 
 var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
