--- a/links/listeners.html
+++ b/links/listeners.html
@@ -1,15 +1,12 @@
 
 {% include scripts/scripts-common.html %}
+<script>{% include scripts/aton.js %}</script>
 
 <script>
 // vim: ts=3
 
-var PEOPLE = {% include data/people.json %}.PERSON;
-var PEEPS = {};
-for (var i=0; i<PEOPLE.length; i++) {
-	PEEPS[PEOPLE[i].NAME] = PEOPLE[i];
-}
-var LINKS = {% include data/links.json %}.LINK;
+var aton = new ATON;
+var LINKS = aton.parse(`{% include data/links.aton %}`).LINK;
 
 var CGI = {};      // CGI parameters from URL
 var ROLLINFO = [];
