--- a/scripts-local.html
+++ b/scripts-local.html
@@ -63,8 +63,11 @@ function doSearch(text) {
 	}
 
 	text = text.trim();
-	text = escape(text).replace(/%([A-F0-9][A-F0-9])/g, "&#x$1;");
-	text = text.replace(/\&#x([0-7][0-9A-F]);/, "%$1");
+	text = escape(text);
+	text = text.replace(/%u0([A-F0-9][A-F0-9][A-F0-9])/g, "&#x$1;");
+	text = text.replace(/%u([A-F0-9][A-F0-9][A-F0-9][A-F0-9])/g, "&#x$1;");
+	text = text.replace(/%([A-F0-9][A-F0-9])/g, "&#x$1;");
+	text = text.replace(/\&#x([0-7][0-9A-F]);/g, "%$1");
 	text = unescape(text);
 	var fields = text.split(/\s+/);
 	var entries = ROLLINFO;
