--- a/duplicates/scripts-audio.html
+++ b/duplicates/scripts-audio.html
@@ -61,8 +61,8 @@ function PlayAudioFile(druid, element, starttime) {
 		// Can't have seekable dynamic content in audio element:
 		//source += '<source src="/data?a=mp3&id=' + druid + '" ';
 		// source += '<source src="https://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp4-exp/' + druid + '.m4a" ';
-		source += '<source src="https://stacks.stanford.edu/file/" + druid + "/" + druid + "_sl.m4a
-		source += 'type="audio/mp4"/>\n';
+		source += '<source src="https://stacks.stanford.edu/file/' + druid + '/' + druid + '_sl.m4a"';
+		source += ' type="audio/mp4"/>\n';
 		AUDIO.innerHTML = source;
 
 		AUDIOdruid = druid;
