Revert to CCRMA for serving MP4 file (library server has timeout on connection which may stop the playback)

--- a/stats/scripts-audio.html
+++ b/stats/scripts-audio.html
@@ -60,8 +60,8 @@ function PlayAudioFile(druid, element, starttime) {
 		var source = '';
 		// Can't have seekable dynamic content in audio element:
 		//source += '<source src="/data?a=mp3&id=' + druid + '" ';
-		// source += '<source src="https://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp4-exp/' + druid + '.m4a" ';
-		source += '<source src="https://stacks.stanford.edu/file/" + druid + "/" + druid + "_sl.m4a
+		source += '<source src="https://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/mp4-exp/' + druid + '.m4a" ';
+		// source += '<source src="https://stacks.stanford.edu/file/" + druid + "/" + druid + "_sl.m4a
 		source += 'type="audio/mp4"/>\n';
 		AUDIO.innerHTML = source;
 
