--- a/midi-spec/styles-local.html
+++ b/midi-spec/styles-local.html
@@ -15,6 +15,15 @@ figure img {
 	box-shadow:         12px 12px 29px #555;
 }
 
+figure img.plain {
+	-o-box-shadow:      none;
+	-icab-box-shadow:   none;
+	-khtml-box-shadow:  none;
+	-moz-box-shadow:    none;
+	-webkit-box-shadow: none;
+	box-shadow:         none;
+}
+
 div#content.container {
 	padding-left: 20px;
 	font-size: 2.25rem;
@@ -34,6 +43,8 @@ h2 {
 h3 {
 	padding-top: 20px;
 	padding-bottom: 10px;
+	color: #891515;
+	font-style: italic;
 }
 
 div#su-content {
