--- a/image-analysis/listeners.html
+++ b/image-analysis/listeners.html
@@ -47,6 +47,7 @@ document.addEventListener("DOMContentLoaded", function () {
 	var url = "https://ccrma.stanford.edu/~craig/piano-roll-project/supra/welte-red/analysis/";
 	var file = "zw904vm6502_analysis.txt.bz2";
 	url = file;
+	url = "https://github.com/pianoroll/SUPRA/blob/gh-pages/image-analysis/zw904vm6502_analysis.txt.bz2?raw=true";
 
 	var request = new XMLHttpRequest();
 	request.open("GET", url);
